--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.5",
+    "@sanity/image-url": "^1.0.2",
     "@thirdweb-dev/react": "^3.6.11",
     "@thirdweb-dev/sdk": "^3.6.11",
     "@types/node": "18.11.18",
@@ -19,6 +20,7 @@
     "eslint-config-next": "13.1.5",
     "ethers": "^5.7.2",
     "next": "13.1.5",
+    "next-sanity": "^4.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
