--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@next/font": "13.1.5",
+    "@sanity/cli": "^3.2.6",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/types": "^3.2.6",
     "@thirdweb-dev/react": "^3.6.11",
     "@thirdweb-dev/sdk": "^3.6.11",
     "@types/node": "18.11.18",
